--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.12"
+hyper = "0.14.25"
+tokio = { version = "1.0", features = ["full"] }
 
 
-# - Ubuntu, `sudo apt-get install lld clang`
-[target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
+[dev-dependencies]
+ureq = "2.6.2"
