--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.6.12"
 hyper = "0.14.25"
+serde = { version = "1", features = ["derive"]}
 tokio = { version = "1.0", features = ["full"] }
 
 
